# gptchain

./: .gitignore  LICENSE  README.md  bot.py  data.txt  example.env  gptchain.py  pyproject.toml  requirements-train.txt  requirements.txt  train.py
deploy/: config.py  runpod.py
utils/: data.py  prompts.py  weights.py
